addressbook-export: Do not translate `--format` arg description
Running strace addressbook-export --help
prints
write(1, "Usage:\n addressbook-export [OPT"..., 359Usage:
addressbook-export [OPTION…]
Help Options:
-h, --help Show help options
Application Options:
--output=OUTPUTFILE Specify the output file instead of standard output
-l, --list-addressbook-folders List local address book folders
--format=csv] Show cards as vcard or csv file
) = 359
Instead of --format=csv]
it shall print --format=[vcard|csv]
or similar