I#499 - addressbook-export: Do not translate `--format` arg description

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/499