src/tools/addressbook-export/addressbook-export.c
@@ -927,7 +927,8 @@ static GOptionEntry entries[] = {
 	{ "format", '\0', 0,
 	  G_OPTION_ARG_STRING, &opt_output_format,
 	  N_("Show cards as vcard or csv file"),
-	  N_("[vcard|csv]") },
+	  /* Do not translate it, the supported values are these, not any translated variants */
+	  "[vcard|csv]" },
 	{ G_OPTION_REMAINING, '\0', 0,
 	  G_OPTION_ARG_STRING_ARRAY, &opt_remaining },
 	{ NULL }
